Revert "Feature/53763 correct clear search alignment"

--- a/Web/Edubase.Web.UI/Assets/Sass/GiasHelpers/_gias-display.scss
+++ b/Web/Edubase.Web.UI/Assets/Sass/GiasHelpers/_gias-display.scss
@@ -51,7 +51,6 @@
 .gias-hidden__from-tablet {
   @include govuk-media-query($from: tablet) {
     display: none;
-    padding-bottom: 0;
   }
 }
 
